using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    internal static string isRunning = "isRunning";
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";

    //trigger
    internal static string jump = "jump";
}